tests/baselines/reference/inheritFromGenericTypeParameter.errors.txt
tests/cases/compiler/inheritFromGenericTypeParameter.ts(1,20): error TS2304: Cannot find name 'T'.
tests/cases/compiler/inheritFromGenericTypeParameter.ts(2,24): error TS2312: An interface may only extend a class or another interface.


==== tests/cases/compiler/inheritFromGenericTypeParameter.ts (2 errors) ====
    class C<T> extends T { }
                       ~
!!! error TS2304: Cannot find name 'T'.
    interface I<T> extends T { }
                           ~
!!! error TS2312: An interface may only extend a class or another interface.